# hourglass-qt

./: .gitignore  CMakeLists.txt  README  TODO  hourglass.pri
debian/: README.source  changelog  control  copyright  gbp.conf
debian/patches/: release-build
public/js/: autocomplete.js  dictionary.js
src/: CMakeLists.txt  about.h  abstractactivitymodel.cpp  abstractactivitymodel.h  abstractlineedit.cpp  abstractlineedit.h  activity.cpp  activity.h  activitydelegate.cpp  activitydelegate.h  activitydialog.cpp  activitydialog.h  activitylineedit.cpp  activitylineedit.h  activitynameslistmodel.cpp  activitynameslistmodel.h  activitytablemodel.cpp  activitytablemodel.h  activitytableview.cpp  activitytableview.h  browser.h  controller.h  currentactivitydelegate.cpp  currentactivitydelegate.h  currentactivitytablemodel.cpp  currentactivitytablemodel.h  currentactivitytableview.cpp  currentactivitytableview.h  database.cpp  database.h  dictionary.cpp  dictionary.h  hourglass.cpp  hourglass.desktop  hourglass.h  hourglass.h.in  launcher.cpp  launcher.h  main.cpp  mainwindow.cpp  (+40 more)
src/hourglass/: CMakeLists.txt  about.cpp  about.h  activity.cpp  activity.h  browser.cpp  browser.h  controller.cpp  controller.h  database.cpp  dictionary.cpp  dictionary.h  hourglass.cpp  hourglass.h  launcher.cpp  launcher.h  main.cpp  model.cpp  model.h  popup.cpp  popup.h  project.cpp  project.h  server.cpp  setting.cpp  setting.h  tag.cpp  thread.cpp  thread.h  version.h  view.cpp  window.cpp  window.h
src/hourglass/src/: aboutdialog.cpp  aboutdialog.h  abstractlineedit.h  activitydialog.h  activitylineedit.cpp  activitytableview.cpp  activitytableview.h  currentactivitydelegate.h  hourglass.cpp  mainwindow.cpp  mainwindow.h  namesdelegate.cpp  projecttotalslistview.h  src.pro  tagslineedit.cpp  version.h
src/hourglass/src/icons/: icons.rcs
src/hourglass/src/ui/: mainwindow.ui
src/icons/: README  icons.pri  icons.rcs
src/libhourglass/include/: include.pri
src/libhourglass/include/hourglass/: abstractnameslistmodel.h  activity.h  currentactivitytablemodel.h  databasemanager.h  project.h  record.h  tag.h
src/libhourglass/src/: abstractactivitymodel.cpp  abstractnameslistmodel.cpp  activity.cpp  activitynameslistmodel.cpp  activitytablemodel.cpp  currentactivitytablemodel.cpp  databasemanager.cpp  project.cpp  projecttotalslistmodel.cpp  record.cpp  recordmanager.cpp  src.pro  tag.cpp  tagnameslistmodel.cpp
src/public/: public.pri  public.rcs
src/public/css/: css.rcs  style.css
src/public/images/: images.rcs
src/public/js/: autocomplete.js  index.js  js.rcs  popup.js  utils.js
src/public/themes/: themes.rcs
src/ui/: activitydialog.ui  mainwindow.ui  preferencesdialog.ui  ui.pri
src/views/: _activities.html  _current.html  _names.js  _tags.html  _totals.html  _week.html  index.html  layout.html  popup.html  settings.html  views.pri  views.rcs
test/: test.pro
test/libhourglass/src/: main.cpp  src.pro  test_record.cpp  test_record.h
views/: _activities.html  _current.html  _names.js  _today.html  _totals.html  _updates.js  _week.html  _weekday.html  index.html  layout.html  popup.html
